fix masthead hero video overflow in safari

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -264,6 +264,7 @@ overflow-x: hidden;
     overflow: hidden;
     height: 100vh;
     max-height: 100vh;
+    position: relative;
 }
 
 .hero__description {
@@ -279,6 +280,13 @@ overflow-x: hidden;
     z-index: 1;
 }
 
+.hero__video-container {
+    position: relative;
+    overflow-x: hidden;
+    max-height: 100vh;
+    height: 100%;
+}
+
 .hero__video {
     max-height: 100vh;
     height: 100%;
@@ -291,6 +299,7 @@ overflow-x: hidden;
     height: 100vh;
     position: absolute;
     right: 0;
+    top: 0;
     opacity: 0.7;
 }
 
